k8s/TLS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoresys-ingress

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - scoresys.com
    secretName: scoresys-tls
  rules:
  - host: scoresys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
      - path: /back
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8081
